	* AUTHORS,
	configure.ac: xpidl not found on OpenSolaris
	Reported by Halton Huo <halton.huo@sun.com>
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=2
	* src/core/pcmanx_utils.h,
	src/notebook.cpp: <bits/wordsize.h> not found on OpenSolaris
	Reported by Halton Huo <halton.huo@sun.com>
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=3

2010-03-05  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* autogen.sh: Change to automake 1.11
	* build/snapshot-deb.sh: popd/pushd is built-in function of bash.
	* src/appconfig.cpp: Fix compilation error.
	* src/mainframe.cpp: Clean some warnings.

2010-03-04  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/appconfig.cpp: Use 'xdg-email' as mail client and 'xdg-open' as web
	browser.

2010-02-10  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/snapshot-deb.sh: Adjust the script for debian package.
	* configure.ac: Add pkg-config for libx11-dev.

2010-02-08  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/make-new-release.sh,
	build/snapshot-deb.sh: Add a script to rapidly generate debian package.
	* configure.ac,
	plugin/src/Makefile.am,
	src/view/telnetcon.cpp: Fix the compilation error when enable plugin.

2010-02-07  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* developers/make-new-release.sh: Move to another folder and adjust the
	way to get version number.
	* configure.ac: Fix the warnings caused by AC_CACHE_VAL of Autoconf Macro,
	and change bug report to http://code.google.com/p/pcmanx-gtk2/issues/list.
	* plugin/src/plugin.cpp: Fix the compilation error and strip warnings.

2010-01-13  Youchen Lee  <copyleft@utcr.org>

	* src/nancy_bot/msg_data.cpp: 
	Ignore "File not found" messages of NancyBot.

2009-08-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* data/nancy_bot/default_msg.data,
	pcmanx-gtk2.spec.in,
	po/zh_CN.po,
	po/zh_TW.po,
	src/core/termdata.cpp,
	src/mainframe.cpp,